fix text alignment on desktop

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4259,6 +4259,7 @@ color: #000;
       .cs-text,
       .cs-title {
           margin-left: 0;
+          text-align: left;
       }
   }
 }
